Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6247324.out
T6247324.java:18:6: compiler.err.cant.resolve.location: kindname.class, Seetharam, , , (compiler.misc.location: kindname.class, Pair<X,Y>, null)
1 error
